[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
# aoc-runner = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner" }
# aoc-runner-derive = { git = "https://github.com/pedantic79/cargo-aoc.git", branch = "new-criterion", package = "aoc-runner-derive" }
nom = "7"
num = "0.4"
itertools = "0.13"
rayon = "1"
pathfinding = "4"
nohash-hasher = "0.2"
rustc-hash = "2"
ahash = "0.8"
gxhash = "3"
arrayvec = "0.7"
stable-pattern = "0.1"
once_cell = "1"
scanf = "1"
bit-set = "0.8"
lazy_static = "1"
bitvec = "1"
smallstr = "0.3.0"
polyfit-rs = "0.2.1"
petgraph = "0.6.4"
regex = "1"
statistical = "1.0.0"

[profile.release]
lto = "thin"
panic = "abort"
